--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<nav>
+	<a routerLink="/register" routerLinkActive="active">1. Register page</a> <br />
+</nav>
+
+<div id="view">
+	<router-outlet></router-outlet>
+</div>
