--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -2,8 +2,8 @@
 	<input type="email" placeholder="Email"
 		formControlName="email"
 	>
-	<input type="password" placeholder="Password"
-		formControlName="password"
+	<input type="id" placeholder="Id"
+		formControlName="id"
 	>
 	<button (click)="login()"
 		[disabled]="!form.valid"
