--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-	<a routerLink="/" routerLinkActive="active">1. login page</a> <br />
+	<a routerLink="/" routerLinkActive="active">LOG-IN</a> <br />
 </nav>
 
 <div id="view">
