--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,10 +1,20 @@
+body
+	margin: 0
+
 nav
 	display: block
-	width: 200px
+	width: 100px
+	height: 100vh
 	border-right: 2px solid red
 	position: absolute
 
 #view
 	display: block
 	position: absolute
-	left: 230px
+	left: 120px
+
+.menu-item
+	color: red
+	text-decoration: none
+	cursor: pointer
+	font-weight: bold
