--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,10 +1,7 @@
-body
-	margin: 0
-
 nav
 	display: block
 	width: 100px
-	height: 100vh
+	height: calc(100vh - 16px)
 	border-right: 2px solid red
 	position: absolute
 
