--- a/src/app/posts/components/home/home.component.html
+++ b/src/app/posts/components/home/home.component.html
@@ -1,4 +1,5 @@
-<!-- Передаем значение переменной allPosts$ из *home.component* в *posts-card-list.component* -->
+<!-- Передаем значения переменных allPosts$ и numb$ из *home.component* в *posts-card-list.component* -->
 <nl-posts-card-list
 	[allPosts]="allPosts$ | async"
+	[postsNumb]="numb$ | async"
 >
