--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+.spinner-container
+	position: fixed
+	top: calc(50vh - 50px)
+	left: calc(50vw - 50px)
+	z-index: 1
