--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,7 @@
 <div id="view">
 	<router-outlet></router-outlet>
 </div>
+
+<div class="spinner-container" *ngIf="loading">
+	<mat-spinner></mat-spinner>
+</div>
