--- a/src/app/posts/components/post/post.component.html
+++ b/src/app/posts/components/post/post.component.html
@@ -4,3 +4,8 @@
 	<h3>Title: {{ post.title }}</h3>
 	<h3>Post: {{ post.body }}</h3>
 </div>
+
+<!-- При false - спинер должен отображаться -->
+<div class="spinner-container" *ngIf="!(loading$ | async)">
+	<mat-spinner></mat-spinner>
+</div>
