--- a/src/app/posts/components/posts-card-list/posts-card-list.component.html
+++ b/src/app/posts/components/posts-card-list/posts-card-list.component.html
@@ -9,4 +9,8 @@
 		[routerLink]="['/posts', post.id]"
 	>VIEW</button>
 
+	<button mat-mini-fab>
+		<mat-icon (click)="editPost(post)">edit</mat-icon>
+	</button>
+	
 </div>
