--- a/src/app/posts/components/edit-post-dialog/edit-post-dialog.component.html
+++ b/src/app/posts/components/edit-post-dialog/edit-post-dialog.component.html
@@ -7,16 +7,15 @@
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Id"
-          formControlName="id"
+          placeholder="Post Title"
+          formControlName="title"
         >
       </mat-form-field>
-
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Title"
-          formControlName="title"
+          placeholder="Post Body"
+          formControlName="body"
         >
       </mat-form-field>
     </ng-container>
