--- a/src/app/posts/components/edit-post-dialog/edit-post-dialog.component.html
+++ b/src/app/posts/components/edit-post-dialog/edit-post-dialog.component.html
@@ -7,15 +7,15 @@
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Title"
-          formControlName="title"
+          placeholder="Category"
+          formControlName="category"
         >
       </mat-form-field>
       <mat-form-field>
         <input 
           matInput
-          placeholder="Post Body"
-          formControlName="body"
+          placeholder="Description"
+          formControlName="description"
         >
       </mat-form-field>
     </ng-container>
@@ -34,7 +34,3 @@
     Save
   </button>
 </mat-dialog-actions>
-
-
-
-
