--- a/src/app/posts/components/home/home.component.html
+++ b/src/app/posts/components/home/home.component.html
@@ -2,5 +2,5 @@
 <nl-posts-card-list 
 	(postChanged)="reload()"
 	[allPosts]="allPosts$ | async"
-	[postsNumb]="numb"
+	[postsNumb]="numb | async"
 >
