--- a/src/app/posts/components/home/home.component.html
+++ b/src/app/posts/components/home/home.component.html
@@ -1,3 +1,10 @@
+<div class="header">
+	Добавить новый пост 
+	<button mat-mini-fab>
+		<mat-icon (click)="onAddCourse()">add</mat-icon>
+	</button>
+</div>
+
 <!-- Передаем значения переменных allPosts$ и numb из *home.component* в *posts-card-list.component* -->
 <nl-posts-card-list 
 	(postChanged)="reload()"
