--- a/src/app/posts/components/posts-card-list/posts-card-list.component.html
+++ b/src/app/posts/components/posts-card-list/posts-card-list.component.html
@@ -13,5 +13,9 @@
 	<button mat-mini-fab>
 		<mat-icon (click)="editPost(post)">edit</mat-icon>
 	</button>
+
+	<button mat-mini-fab color="warn">
+		<mat-icon (click)="onDeletePost(post)">delete</mat-icon>
+	</button>
 	
 </div>
