--- a/src/app/posts/components/posts-card-list/posts-card-list.component.html
+++ b/src/app/posts/components/posts-card-list/posts-card-list.component.html
@@ -5,10 +5,10 @@
 
 	<h3>{{ post.description }}</h3>
 	<img style="width: 100px;" [src]="post?.iconUrl">
-	
-	<button
-		[routerLink]="['/posts', post.url]"
-	>VIEW</button>
+
+	<button mat-raised-button color="primary" [routerLink]="['/posts', post.url]">
+		VIEW
+	</button>
 
 	<button mat-mini-fab>
 		<mat-icon (click)="editPost(post)">edit</mat-icon>
